# icsa-scraper

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: api.md  notebook-style.md
examples/: csr-ranking.ipynb  export-skipper-finishes.ipynb  fleet-head-to-head.ipynb  quickstart.ipynb  sailor-head-to-head.ipynb  skipper-bradley-terry.ipynb  skipper-elo.ipynb  team-elo.ipynb  team-head-to-head.ipynb
src/scraper/: __init__.py  adapter.py  assemble.py  cache.py  client.py  dataset.py  fetcher.py  head_to_head.py  ids.py  models.py  sailor_races.py  school_names.py  stores.py  urls.py  views.py
src/scraper/live/: front_page.py
src/scraper/parsers/: _soup.py  division.py  full_scores.py  metadata.py  regatta.py  rotations_teams.py  sailor_profile.py  sailors.py  school.py  season.py  team_all_races.py  team_rotations.py  team_sailors.py
tests/: conftest.py  html_fixtures.py  test_adapter.py  test_client.py  test_dataset.py  test_front_page.py  test_head_to_head.py  test_load.py  test_parsers.py  test_regatta_dates.py  test_rotations_teams.py  test_sailor_profile.py  test_sailor_races.py  test_team_rotations.py  test_urls_ids.py  test_views.py
